--- a/packages/react-lab/package.json
+++ b/packages/react-lab/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-code-editor": "^0.13.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -66,6 +68,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@types/prismjs": "^1.26.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
     "storybook-addon-react-router-v6": "^0.1.14",
