--- a/packages/react-lab/package.json
+++ b/packages/react-lab/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "my-addon": "*",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
