--- a/packages/react-lab/package.json
+++ b/packages/react-lab/package.json
@@ -44,6 +44,7 @@
     "my-addon": "*",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.3",
+    "storybook-addon-react-router-v6": "^0.3.5",
     "typescript": "^4.7.4",
     "vite": "^4.2.1"
   }
