--- a/packages/react-lab/package.json
+++ b/packages/react-lab/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@uiw/react-textarea-code-editor": "^2.0.6",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
